--- a/刷机.md
+++ b/刷机.md
@@ -21,5 +21,8 @@
         
       - fastboot reboot  
         
-      - linux：使用dd命令；  
+    - linux：使用dd命令烧录uboot； 
+      - ls /dev/sd* 查看设备
+      - 在uboot_sd_fusing目录下执行./nand_fusing.sh  /dev/sdb  
+      - 启动后使用fastboot 下刷机；  
   
