--- a/刷机.md
+++ b/刷机.md
@@ -1,4 +1,4 @@
-  - SD卡启动通过mkx210.c（主机中执行的linux）怎样加工led.bin得到210.bin；（默认是sd0从iNand启动，sd0启动失败后才会congsd2启动）
+  - SD卡启动通过mkx210.c（主机中执行的linux）怎样加工led.bin得到210.bin；（默认是sd0从iNand启动，sd0启动失败后才会从sd2启动）
     - 破坏内部iNand——bootloader(实质就是破坏iNand第一个扇区内的内容，加载BL启动时会头校验):  
       - 1.在烧录210.bin时候（内部已经有16字节的校验头）会重新校验生产16字节校验头和原来的校验头比较是否相等；  
       - 2.busybox dd if=/dev/zero of=/dev/mmcblk0 bs=512 seek=1 count=1 conv=sync   
